@@ -63,6 +63,7 @@ lib/gecoder/interface/constraints/int_enum_constraints.rb -text
 lib/gecoder/interface/constraints/int_var_constraints.rb -text
 lib/gecoder/interface/constraints/reifiable_constraints.rb -text
 lib/gecoder/interface/constraints/set/cardinality.rb -text
+lib/gecoder/interface/constraints/set/connection.rb -text
 lib/gecoder/interface/constraints/set/domain.rb -text
 lib/gecoder/interface/constraints/set/relation.rb -text
 lib/gecoder/interface/constraints/set_enum/channel.rb -text
@@ -82,6 +83,7 @@ specs/constraints/bool_enum.rb -text
 specs/constraints/boolean.rb -text
 specs/constraints/cardinality.rb -text
 specs/constraints/channel.rb -text
+specs/constraints/connection.rb -text
 specs/constraints/constraint_helper.rb -text
 specs/constraints/constraints.rb -text
 specs/constraints/count.rb -text
