@@ -90,3 +90,16 @@ elements.must.channel position_sets
 This allows us to post constraints on @position_sets@ and have them affect
 @elements@ (gaining another viewpoint). Neither negation nor reification is 
 supported by the constraint.
+
+h3. Min and max
+
+The min and max constraints constrain the minimum and maximum of a set. The 
+following constrains the minimum of @set@ to be at least 5.
+
+<ruby>
+set.min.must >= 5
+</ruby>
+
+Integer variables can also be used (instead of @5@ in the example). Everything
+that's normally supported by single integer variables followed by @must*@ is 
+supported after @set.min.must*@ too.
